src/objects/Apttus_Proposal_Proposal_c__x.object
<CustomObject>
    <externalDataSource>Legacy_Quintiles</externalDataSource>
    <externalName>Apttus_Proposal__Proposal__c</externalName>
    <fields>
        <fullName>APTPS_Async_Cart_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTPS_Async_Cart__c</externalDeveloperName>
        <inlineHelpText>Select this check box to open the cart in Async</inlineHelpText>
        <label>Async Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Currency_Symbol_c__c</fullName>
        <externalDeveloperName>APTPS_Currency_Symbol__c</externalDeveloperName>
        <label>Currency Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Date_of_Today_c__c</fullName>
        <externalDeveloperName>APTPS_Date_of_Today__c</externalDeveloperName>
        <label>Date of Today</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTPS_Disable_Price_Lockdown_Alert_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTPS_Disable_Price_Lockdown_Alert__c</externalDeveloperName>
        <label>Disable Price Lockdown Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_InterpretProtocolEnabled_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTPS_InterpretProtocolEnabled__c</externalDeveloperName>
        <label>InterpretProtocolEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Scientific_Due_Date_c__c</fullName>
        <externalDeveloperName>APTPS_Scientific_Due_Date__c</externalDeveloperName>
        <label>Scientific Due Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTPS_Study_Country_Regions_c__c</fullName>
        <externalDeveloperName>APTPS_Study_Country_Regions__c</externalDeveloperName>
        <inlineHelpText>Field auto-populates.</inlineHelpText>
        <label>Study Country Regions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AP_H_E_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_AP_H_E__c</externalDeveloperName>
        <inlineHelpText>This will be checked if any Test Product has AP Bio-marker as AP.</inlineHelpText>
        <label>AP/H&amp;E</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Algorithm_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Algorithm_Required__c</externalDeveloperName>
        <label>Algorithm Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Alien_Import_c__c</fullName>
        <externalDeveloperName>APTS_Alien_Import__c</externalDeveloperName>
        <label>Alien Import</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Batch Testing</fullName>
                </value>
                <value>
                    <fullName>Live Testing</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_All_Fixed_Currency_Contracts_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_All_Fixed_Currency_Contracts__c</externalDeveloperName>
        <label>All Fixed Currency Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ambient_Outbound_Shipping_Contai__c</fullName>
        <externalDeveloperName>APTS_Ambient_Outbound_Shipping_Container__c</externalDeveloperName>
        <label>Ambient Outbound Shipping Containers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Amendment_Complexity_c__c</fullName>
        <externalDeveloperName>APTS_Amendment_Complexity__c</externalDeveloperName>
        <label>Amendment Complexity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Amendment_Weight_c__c</fullName>
        <externalDeveloperName>APTS_Amendment_Weight__c</externalDeveloperName>
        <label>Amendment Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Americas_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_Americas_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for Americas Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>Americas Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Americas_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_Americas_TotalSites__c</externalDeveloperName>
        <label>Americas TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Americas_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_Americas_Total_Patient_Visits__c</externalDeveloperName>
        <label>Americas Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Americas_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_Americas_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for Americas Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>Americas Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Anatomic_Pathology_c__c</fullName>
        <externalDeveloperName>APTS_Anatomic_Pathology__c</externalDeveloperName>
        <label>Anatomic Pathology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Any_Special_TAT_Rqmts_for_Tests__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Any_Special_TAT_Rqmts_for_Tests__c</externalDeveloperName>
        <label>Any Special TAT Requirements for Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Any_special_report_requests_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Any_special_report_requests__c</externalDeveloperName>
        <label>Any special report requests?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Any_special_supplies_requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Any_special_supplies_requirement__c</externalDeveloperName>
        <label>Any special supplies requirement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Step_1_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Approval_Step_1__c</externalDeveloperName>
        <label>Approval Step 1</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Step_2_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Approval_Step_2__c</externalDeveloperName>
        <label>Approval Step 2</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Step_3_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Approval_Step_3__c</externalDeveloperName>
        <label>Approval Step 3</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Are_there_nonstandard_Test_requi__c</fullName>
        <externalDeveloperName>APTS_Are_there_nonstandard_Test_requi__c</externalDeveloperName>
        <label>Are there nonstandard Test requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Conversion_Rate__c</externalDeveloperName>
        <label>Argentina Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Currency2__c</externalDeveloperName>
        <label>Argentina Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Currency_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Currency__c</externalDeveloperName>
        <label>Argentina Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Discount__c</externalDeveloperName>
        <label>Argentina Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_First_Patient_In_Date__c</fullName>
        <externalDeveloperName>APTS_Argentina_First_Patient_In_Date__c</externalDeveloperName>
        <label>Argentina First Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for Argentina Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>Argentina Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Region_Name__c</externalDeveloperName>
        <label>Argentina Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Study_Id_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Study_Id__c</externalDeveloperName>
        <label>Argentina Study Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_TotalSites__c</externalDeveloperName>
        <label>Argentina TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Total_Count__c</externalDeveloperName>
        <label>Argentina Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Total_Patient_Visits__c</externalDeveloperName>
        <label>Argentina Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Argentina_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_Argentina_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for Argentina Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>Argentina Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Asia_Pac_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_Asia_Pac_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for Asia-Pac Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>Asia-Pac Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Asia_Pac_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_Asia_Pac_TotalSites__c</externalDeveloperName>
        <label>Asia-Pac TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Asia_Pac_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_Asia_Pac_Total_Patient_Visits__c</externalDeveloperName>
        <label>Asia-Pac Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Asia_Pac_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_Asia_Pac_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for Asia-Pac Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>Asia-Pac Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Async_Processing_Error_Log_c__c</fullName>
        <externalDeveloperName>APTS_Async_Processing_Error_Log__c</externalDeveloperName>
        <label>Async Processing Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Async_Processing_Remaining_for_R__c</fullName>
        <externalDeveloperName>APTS_Async_Processing_Remaining_for_Regi__c</externalDeveloperName>
        <label>Async Processing Remaining for Regions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Conversion_Rate__c</externalDeveloperName>
        <label>Asia-Pac Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Currency2__c</externalDeveloperName>
        <label>Asia-Pac Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Australia_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_Currency_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Currency__c</externalDeveloperName>
        <label>Australia Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Discount__c</externalDeveloperName>
        <label>Asia-Pac Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_First_Patient_In_Date__c</fullName>
        <externalDeveloperName>APTS_Australia_First_Patient_In_Date__c</externalDeveloperName>
        <label>Australia First Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Region_Name__c</externalDeveloperName>
        <label>Asia-Pac Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Australia_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_Australia_Total_Count__c</externalDeveloperName>
        <label>Australia Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Batch_or_Real_Time_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Batch_or_Real_Time__c</externalDeveloperName>
        <label>Batch or Real Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Batched_Dry_Ice_Outbound_Ship_Co__c</fullName>
        <externalDeveloperName>APTS_Batched_Dry_Ice_Outbound_Ship_Cont__c</externalDeveloperName>
        <label>Batched Dry Ice Outbound Shipping Contai</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bid_Defense_Date_c__c</fullName>
        <externalDeveloperName>APTS_Bid_Defense_Date__c</externalDeveloperName>
        <label>Bid Defense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Bid_Manager_c__c</fullName>
        <externalDeveloperName>APTS_Bid_Manager__c</externalDeveloperName>
        <label>Bid Manager</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bid_Protocol_No_c__c</fullName>
        <externalDeveloperName>APTS_Bid_Protocol_No__c</externalDeveloperName>
        <label>Bid Protocol No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_To_Account_c__c</fullName>
        <externalDeveloperName>APTS_Bill_To_Account__c</externalDeveloperName>
        <label>Bill To Account</label>
        <length>18</length>
        <referenceTo>LQ_Account__x</referenceTo>
        <relationshipName>Proposals5</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>APTS_Biomarker_Study_c__c</fullName>
        <externalDeveloperName>APTS_Biomarker_Study__c</externalDeveloperName>
        <label>Biomarker Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Blinding_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Blinding__c</externalDeveloperName>
        <label>Blinding Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Blood_Collection_Kit_Size_c__c</fullName>
        <externalDeveloperName>APTS_Blood_Collection_Kit_Size__c</externalDeveloperName>
        <label>Blood Collection Kit Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Booking_Value_Final_c__c</fullName>
        <externalDeveloperName>APTS_Booking_Value_Final__c</externalDeveloperName>
        <label>Booking Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Booking_Value_c__c</fullName>
        <externalDeveloperName>APTS_Booking_Value__c</externalDeveloperName>
        <inlineHelpText>Need APTTUS to configure the field to populate the values.</inlineHelpText>
        <label>Booking Value Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Conversion_Rate__c</externalDeveloperName>
        <label>Brazil Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Currency2__c</externalDeveloperName>
        <label>Brazil Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Currency_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Currency__c</externalDeveloperName>
        <label>Brazil Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Discount__c</externalDeveloperName>
        <label>Brazil Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_First_Patient_In_Date_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_First_Patient_In_Date__c</externalDeveloperName>
        <label>Brazil First Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for Brazil Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>Brazil Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Region_Name__c</externalDeveloperName>
        <label>Brazil Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Study_Id_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Study_Id__c</externalDeveloperName>
        <label>Brazil Study Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_TotalSites__c</externalDeveloperName>
        <label>Brazil TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Total_Count__c</externalDeveloperName>
        <label>Brazil Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Total_Patient_Visits__c</externalDeveloperName>
        <label>Brazil Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Brazil_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_Brazil_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for Brazil Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>Brazil Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Budget_Version_Description_c__c</fullName>
        <externalDeveloperName>APTS_Budget_Version_Description__c</externalDeveloperName>
        <inlineHelpText>To be used for defining scenario specifics.</inlineHelpText>
        <label>Budget Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bulk_Storage_study_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Bulk_Storage_study__c</externalDeveloperName>
        <label>Bulk Storage study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Chance_of_Booking_c__c</fullName>
        <externalDeveloperName>APTS_Chance_of_Booking__c</externalDeveloperName>
        <label>Chance of Booking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Change_Order_Setup_Hours_c__c</fullName>
        <externalDeveloperName>APTS_Change_Order_Setup_Hours__c</externalDeveloperName>
        <label>Change Order Setup Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Change_Order_c__c</fullName>
        <externalDeveloperName>APTS_Change_Order__c</externalDeveloperName>
        <label>Change Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Check_for_Product_Attribute_Valu__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Check_for_Product_Attribute_Values__c</externalDeveloperName>
        <label>Check for Product Attribute Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_China_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_China_Conversion_Rate__c</externalDeveloperName>
        <label>China Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_China_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_China_Currency2__c</externalDeveloperName>
        <label>China Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_China_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_China_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_China_Currency_c__c</fullName>
        <externalDeveloperName>APTS_China_Currency__c</externalDeveloperName>
        <label>China Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_China_Discount_c__c</fullName>
        <externalDeveloperName>APTS_China_Discount__c</externalDeveloperName>
        <label>China Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_China_Export_license_requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_China_Export_license_requirements__c</externalDeveloperName>
        <label>China - Export license requirements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_China_First_Patient_In_Date_c__c</fullName>
        <externalDeveloperName>APTS_China_First_Patient_In_Date__c</externalDeveloperName>
        <label>China First Patient In Date</label>
        <type>Date</type>
    </fields>
</CustomObject>